<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/insert_activity"
        android:textColorHint="#000"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="?attr/colorPrimary"
        />

    <EditText
        android:id="@+id/activity_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:inputType="text"
        android:padding="8dp"
        android:layout_marginTop="16dp"
        android:hint="@string/activity_name"
        android:background="@drawable/add_activity_input"
        />

    <EditText
        android:id="@+id/activity_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:padding="8dp"
        android:layout_marginTop="16dp"
        android:hint="@string/activity_desc"
        android:background="@drawable/add_activity_input"
        />


    <!-- TimePicker widget -->
    <TimePicker
        android:id="@+id/taskTimePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:timePickerMode="spinner"
        android:layout_gravity="center"
        android:layout_marginVertical="16dp"
        android:theme="@style/TimePickerStyle"/>


</LinearLayout>