<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@drawable/background_task"
    android:padding="16dp"
    android:gravity="center"
    android:layout_marginVertical="8dp">


      <View
          android:layout_width="7dp"
          android:layout_height="55dp"
          android:background="#FF00FF"/>

       <LinearLayout
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           android:layout_marginStart="15dp">
           <TextView
               android:id="@+id/tvTaskName"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:textColor="#000"
               android:text="@string/task_name_ex"
               android:textSize="20sp"
               android:textStyle="bold" />

           <TextView
               android:id="@+id/tvTaskDesc"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:drawablePadding="8dp"
               android:textColor="#000"
               android:textSize="18sp"
               android:textStyle="italic"
               android:text="@string/task_desc_ex"/>

           <TextView
               android:id="@+id/tvTaskDateTime"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:textColor="#000"
               android:text="@string/task_date_ex"
               android:textAlignment="textEnd"
               />
       </LinearLayout>
</LinearLayout>